--- a/action.yml
+++ b/action.yml
@@ -25,12 +25,12 @@ inputs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          creds: ${{inputs.azure_credentials}}
+          creds: ${{github.event.inputs.azure_credentials}}
 
       - name: Zip the app contents
         uses: papeloto/action-zip@v1
         with:
-          files: ${{inputs.publish_directory}}
+          files: ${{github.event.inputs.publish_directory}}
         dest: publish.zip
 
       - name: Set SAS token expiration
@@ -43,10 +43,10 @@ inputs:
           inlineScript: |
             az extension add --name webapp
 
-            az storage blob upload      -f app.zip    --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}}
+            az storage blob upload      -f app.zip    --account-name ${{github.event.inputs.account_name}} -C ${{github.event.inputs.container_name}} -n ${{github.event.inputs.account_name}}
 
-            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
+            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{github.event.inputs.account_name}} -C ${{github.event.inputs.container_name}} -n ${{github.event.inputs.account_name}} | xargs)
 
-            az webapp deploy --name $WEBAPP --resource-group ${{inputs.resource_group}} --type zip --src-url  $ZIP_URL --async false
+            az webapp deploy --name $WEBAPP --resource-group ${{github.event.inputs.resource_group}} --type zip --src-url  $ZIP_URL --async false
 
-            az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
+            az storage container delete -n ${{github.event.inputs.container_name}} --account-name ${{github.event.inputs.account_name}} 
