--- a/action.yml
+++ b/action.yml
@@ -46,7 +46,7 @@ runs:
         inlineScript: |
           az extension add --name webapp
 
-          az storage blob upload      -f app.zip    --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}}
+          az storage blob upload -f app.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
 
           ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
 
