--- a/action.yml
+++ b/action.yml
@@ -36,9 +36,6 @@ runs:
     - name: Set SAS token expiration
       shell: bash
       run: echo "expiry=`date -u -d 10 minutes '+%Y-%m-%dT%H:%MZ'`" >> $GITHUB_ENV
-    - name: Debug
-      shell: bash
-      run: ls -la
     - name: Deploy from storage
       uses: azure/CLI@v1
       with:
@@ -46,7 +43,7 @@ runs:
         inlineScript: |
           az extension add --name webapp
 
-          az storage blob upload -f app.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
+          az storage blob upload -f publish.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
 
           ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
 
