--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Debug
+      shell: bash
+      run: ls -la
     - name: Zip the app contents
       uses: papeloto/action-zip@v1
       with:
@@ -47,7 +50,7 @@ runs:
 
           az storage blob upload -f publish.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
 
-          ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -C ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
+          ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
 
           az webapp deploy --name ${{inputs.service_app_name}} --resource-group ${{inputs.resource_group}} --type zip --src-url  $ZIP_URL --async false
 
