--- a/action.yml
+++ b/action.yml
@@ -40,25 +40,12 @@ runs:
       uses: azure/CLI@v1
       with:
         azcliversion: 2.30.0
-        inlineScript: |
-          az extension add --name webapp
+    - run: az extension add --name webapp
 
-          az storage container create -n ${{inputs.container_name}} --account-name ${{inputs.account_name}}
+    - run: az storage container create -n ${{inputs.container_name}} --account-name ${{inputs.account_name}}
 
-          az storage blob upload -f publish.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
+    - run: az storage blob upload -f publish.zip --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}}
 
-          ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
-          echo ${ZIP_URL}
-          az rest --method PUT \
-          --uri https://management.azure.com/subscriptions/e672c783-b7a3-410c-90c7-5bc28ba7f7ac/resourceGroups/${{inputs.resource_group}}/providers/Microsoft.Web/sites/${{inputs.service_app_name}}/extensions/onedeploy?api-version=2020-12-01 \
-          --body '{ 
-            "properties": { 
-              "properties": {
-                "packageUri": "'"${ZIP_URL}"'"
-              }, 
-              "type": "zip",
-            }
-          }'
-          az webapp deploy --name ${{inputs.service_app_name}} --resource-group ${{inputs.resource_group}} --type zip --src-url  $ZIP_URL --async false
-
-          az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
+    - run: ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
+    - run: az rest --method PUT --uri https://management.azure.com/subscriptions/e672c783-b7a3-410c-90c7-5bc28ba7f7ac/resourceGroups/${{inputs.resource_group}}/providers/Microsoft.Web/sites/${{inputs.service_app_name}}/extensions/onedeploy?api-version=2020-12-01 --body '{ "properties": { "properties": { "packageUri": "${ZIP_URL}" }, "type": "zip", } }'
+    - run: az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
