--- a/action.yml
+++ b/action.yml
@@ -49,13 +49,13 @@ runs:
 
           ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{env.expiry}} --account-name ${{inputs.account_name}} -c ${{inputs.container_name}} -n ${{inputs.account_name}} | xargs)
           az rest --method PUT \
-          --uri https://management.azure.com/subscriptions/${SUBSCRIPTION}/resourceGroups/${RESOURCE_GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2020-12-01 \
-          --body '{ 
-            "properties": { 
-              "properties": {
-                "packageUri": "${ZIP_URL}"
-               }, 
-              "type": "zip",
-            }
-          }'
-      az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
+            --uri https://management.azure.com/subscriptions/e672c783-b7a3-410c-90c7-5bc28ba7f7ac/resourceGroups/${{inputs.resource_group}}/providers/Microsoft.Web/sites/${{service_app_name}}/extensions/onedeploy?api-version=2020-12-01 \
+            --body '{ 
+              "properties": { 
+                "properties": {
+                  "packageUri": "${ZIP_URL}"
+                 }, 
+                "type": "zip",
+              }
+            }'
+          az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
