--- a/action.yml
+++ b/action.yml
@@ -59,4 +59,4 @@ runs:
                 "type": "zip"
               }, 
             }'
-          az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
+          # az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
