--- a/action.yml
+++ b/action.yml
@@ -59,12 +59,13 @@ runs:
           #       "type": "zip"
           #     }, 
           #   }'
-          az rest --method PUT \
-            --uri https://management.azure.com/subscriptions/e672c783-b7a3-410c-90c7-5bc28ba7f7ac/resourceGroups/${{inputs.resource_group}}/providers/Microsoft.Web/sites/${{inputs.service_app_name}}/extensions/MSDeploy?api-version=2022-03-01 \
-            --body '{
-              "properties": {
-                "type": "zip", 
-                "packageUri": "'"${ZIP_URL}"'"
-              }
-            }'
+          # az rest --method PUT \
+          #   --uri https://management.azure.com/subscriptions/e672c783-b7a3-410c-90c7-5bc28ba7f7ac/resourceGroups/${{inputs.resource_group}}/providers/Microsoft.Web/sites/${{inputs.service_app_name}}/extensions/MSDeploy?api-version=2022-03-01 \
+          #   --body '{
+          #     "properties": {
+          #       "type": "zip", 
+          #       "packageUri": "'"${ZIP_URL}"'"
+          #     }
+          #   }'
+          az webapp deploy --name ${{inputs.service_app_name}} --resource-group ${{inputs.resource_group}} --type zip --src-url  $ZIP_URL --async true
           # az storage container delete -n ${{inputs.container_name}} --account-name ${{inputs.account_name}} 
